--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.7",
+    "@mui/material": "^5.15.7",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.22.0",
     "react-slick": "^0.30.1",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
